Fix message word wrapping

--- a/static/styles/messages.scss
+++ b/static/styles/messages.scss
@@ -58,6 +58,7 @@ div.messages {
         margin: 0;
         padding: 0;
         word-wrap: break-word;
+        white-space: pre-wrap;
       }
     }
   }
